Bug 201667 - Parameter names are cut off if they are too long, instead of word-wrapping to a new line
Summary: Parameter names are cut off if they are too long, instead of word-wrapping to...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2009-07-27 15:53 UTC by George Goldberg
Modified: 2012-07-06 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description George Goldberg 2009-07-27 15:53:33 UTC
In the Add Account wizard, stage two, using the autogenerated UI (where no plugin is installed for the UI for that Connection Manager / Protocol combination), the labels showing the parameter names should (but don't) word wrap if they are too long. Please fix this :)
Comment 1 Martin Klapetek 2011-11-02 10:41:50 UTC
Do you remember which parameter this was (and is it still a valid issue? Given that it's from 2009..)
Comment 2 Daniele E. Domenichelli 2011-11-02 14:50:31 UTC
This is just for the "autogenerated UI" and since we are now shipping the plugins together with the kcm, and we have plugins for all the connection managers, we can probably close this now...
Comment 3 Martin Klapetek 2011-11-02 14:56:48 UTC
Git commit f3b20aa8e48ab0f8708f3ad83eacf2221606d212 by Martin Klapetek.
Committed on 02/11/2011 at 11:50.
Pushed by mklapetek into branch 'master'.

Use word wrapping in auto-generated UI

BUG: 201667

M  +1    -0    src/KCMTelepathyAccounts/parameter-edit-delegate.cpp

http://commits.kde.org/telepathy-accounts-kcm/f3b20aa8e48ab0f8708f3ad83eacf2221606d212