Use word wrapping in auto-generated UI

BUG: 201667